--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./public/amfeFlexible.js"></script>
+    <script src="./public/amfeFlexible/index.min.js"></script>
     <link rel="stylesheet" href="./public/iconfont/iconfont.css">
     <title>Webpack-Vue-Music</title>
 </head>
